// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader Component should render a basic component: basic 1`] = `
<PageHeader>
  <PageHeader>
    <section
      className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
      widget-type="InsightsPageHeader"
    >
      <Title
        headingLevel="h1"
      >
        <h1
          className="pf-c-title pf-m-2xl"
        >
          <span
            className="test"
          >
            lorem
          </span>
        </h1>
      </Title>
    </section>
  </PageHeader>
</PageHeader>
`;

exports[`PageHeader Component should render string node types: string 1`] = `
<PageHeader>
  <PageHeader>
    <section
      className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
      widget-type="InsightsPageHeader"
    >
      <Title
        headingLevel="h1"
      >
        <h1
          className="pf-c-title pf-m-2xl"
        >
          dolor sit
        </h1>
      </Title>
    </section>
  </PageHeader>
</PageHeader>
`;
